--- a/Bootstrap4/confusion/css/styles.css
+++ b/Bootstrap4/confusion/css/styles.css
@@ -42,3 +42,18 @@ body {
     border-bottom: 1px solid #ddd;
     padding: 10px;
 }
+
+.carousel {
+    background: #512da8;
+}
+
+.carousel-item {
+    height: 300px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    min-height: 300px;
+}
