--- a/Bootstrap4/confusion/css/styles.css
+++ b/Bootstrap4/confusion/css/styles.css
@@ -57,3 +57,10 @@ body {
     left: 0px;
     min-height: 300px;
 }
+
+#carouselButton {
+    right: 0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
